@@ -1,3 +1,9 @@
+2010-10-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed the bug that downloading > 4GB file fails on 32bit systems.
+	* src/HttpRequest.cc
+	* src/HttpRequestCommand.cc
+
 2010-10-30  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Use unnamed namespace instead of static keyword.
